nimnuklear/src/nuklear.h


typedef NK_UINT8 nk_byte;

typedef NK_UINT32 nk_uint;


typedef nk_uint nk_hash;

typedef nk_uint nk_flags;

struct nk_style_item;

struct nk_user_font;

struct nk_context;

struct nk_color {nk_byte r,g,b,a;};

struct nk_colorf {float r,g,b,a;};

struct nk_vec2 {float x,y;};

struct nk_vec2i {short x, y;};

struct nk_rect {float x,y,w,h;};

struct nk_recti {short x,y,w,h;};

typedef union {void *ptr; int id;} nk_handle;

struct nk_image {nk_handle handle;unsigned short w,h;unsigned short region[4];};

struct nk_cursor {struct nk_image img; struct nk_vec2 size, offset;};


enum nk_heading         {NK_UP, NK_RIGHT, NK_DOWN, NK_LEFT};

/* =============================================================================
 *
 *                                  STYLE
 *
 * ============================================================================= */
enum nk_style_colors {
    NK_COLOR_TEXT,
    NK_COLOR_WINDOW,
    NK_COLOR_HEADER,
    NK_COLOR_BORDER,
    NK_COLOR_BUTTON,
    NK_COLOR_BUTTON_HOVER,
    NK_COLOR_BUTTON_ACTIVE,
    NK_COLOR_TOGGLE,
    NK_COLOR_TOGGLE_HOVER,
    NK_COLOR_TOGGLE_CURSOR,
    NK_COLOR_SELECT,
    NK_COLOR_SELECT_ACTIVE,
    NK_COLOR_SLIDER,
    NK_COLOR_SLIDER_CURSOR,
    NK_COLOR_SLIDER_CURSOR_HOVER,
    NK_COLOR_SLIDER_CURSOR_ACTIVE,
    NK_COLOR_PROPERTY,
    NK_COLOR_EDIT,
    NK_COLOR_EDIT_CURSOR,
    NK_COLOR_COMBO,
    NK_COLOR_CHART,
    NK_COLOR_CHART_COLOR,
    NK_COLOR_CHART_COLOR_HIGHLIGHT,
    NK_COLOR_SCROLLBAR,
    NK_COLOR_SCROLLBAR_CURSOR,
    NK_COLOR_SCROLLBAR_CURSOR_HOVER,
    NK_COLOR_SCROLLBAR_CURSOR_ACTIVE,
    NK_COLOR_TAB_HEADER,
    NK_COLOR_COUNT
};

enum nk_style_cursor {
    NK_CURSOR_ARROW,
    NK_CURSOR_TEXT,
    NK_CURSOR_MOVE,
    NK_CURSOR_RESIZE_VERTICAL,
    NK_CURSOR_RESIZE_HORIZONTAL,
    NK_CURSOR_RESIZE_TOP_LEFT_DOWN_RIGHT,
    NK_CURSOR_RESIZE_TOP_RIGHT_DOWN_LEFT,
    NK_CURSOR_COUNT
};

NK_API void nk_style_default(struct nk_context*);

NK_API void nk_style_from_table(struct nk_context*, const struct nk_color*);

NK_API void nk_style_load_cursor(struct nk_context*, enum nk_style_cursor, const struct nk_cursor*);

NK_API void nk_style_load_all_cursors(struct nk_context*, struct nk_cursor*);

NK_API const char* nk_style_get_color_by_name(enum nk_style_colors);

NK_API void nk_style_set_font(struct nk_context*, const struct nk_user_font*);

NK_API int nk_style_set_cursor(struct nk_context*, enum nk_style_cursor);

NK_API void nk_style_show_cursor(struct nk_context*);

NK_API void nk_style_hide_cursor(struct nk_context*);


NK_API int nk_style_push_font(struct nk_context*, const struct nk_user_font*);

NK_API int nk_style_push_float(struct nk_context*, float*, float);

NK_API int nk_style_push_vec2(struct nk_context*, struct nk_vec2*, struct nk_vec2);

NK_API int nk_style_push_style_item(struct nk_context*, struct nk_style_item*, struct nk_style_item);

NK_API int nk_style_push_flags(struct nk_context*, nk_flags*, nk_flags);

NK_API int nk_style_push_color(struct nk_context*, struct nk_color*, struct nk_color);


NK_API int nk_style_pop_font(struct nk_context*);

NK_API int nk_style_pop_float(struct nk_context*);

NK_API int nk_style_pop_vec2(struct nk_context*);

NK_API int nk_style_pop_style_item(struct nk_context*);

NK_API int nk_style_pop_flags(struct nk_context*);

NK_API int nk_style_pop_color(struct nk_context*);

/* =============================================================================
 *
 *                                  COLOR
 *
 * ============================================================================= */
NK_API struct nk_color nk_rgb(int r, int g, int b);

NK_API struct nk_color nk_rgb_iv(const int *rgb);

NK_API struct nk_color nk_rgb_bv(const nk_byte* rgb);

NK_API struct nk_color nk_rgb_f(float r, float g, float b);

NK_API struct nk_color nk_rgb_fv(const float *rgb);

NK_API struct nk_color nk_rgb_cf(struct nk_colorf c);

NK_API struct nk_color nk_rgb_hex(const char *rgb);


NK_API struct nk_color nk_rgba(int r, int g, int b, int a);

NK_API struct nk_color nk_rgba_u32(nk_uint);

NK_API struct nk_color nk_rgba_iv(const int *rgba);

NK_API struct nk_color nk_rgba_bv(const nk_byte *rgba);

NK_API struct nk_color nk_rgba_f(float r, float g, float b, float a);

NK_API struct nk_color nk_rgba_fv(const float *rgba);

NK_API struct nk_color nk_rgba_cf(struct nk_colorf c);

NK_API struct nk_color nk_rgba_hex(const char *rgb);


NK_API struct nk_colorf nk_hsva_colorf(float h, float s, float v, float a);

NK_API struct nk_colorf nk_hsva_colorfv(float *c);

NK_API void nk_colorf_hsva_f(float *out_h, float *out_s, float *out_v, float *out_a, struct nk_colorf in);

NK_API void nk_colorf_hsva_fv(float *hsva, struct nk_colorf in);


NK_API struct nk_color nk_hsv(int h, int s, int v);

NK_API struct nk_color nk_hsv_iv(const int *hsv);

NK_API struct nk_color nk_hsv_bv(const nk_byte *hsv);

NK_API struct nk_color nk_hsv_f(float h, float s, float v);

NK_API struct nk_color nk_hsv_fv(const float *hsv);


NK_API struct nk_color nk_hsva(int h, int s, int v, int a);

NK_API struct nk_color nk_hsva_iv(const int *hsva);

NK_API struct nk_color nk_hsva_bv(const nk_byte *hsva);

NK_API struct nk_color nk_hsva_f(float h, float s, float v, float a);

NK_API struct nk_color nk_hsva_fv(const float *hsva);


/* color (conversion nuklear --> user) */
NK_API void nk_color_f(float *r, float *g, float *b, float *a, struct nk_color);

NK_API void nk_color_fv(float *rgba_out, struct nk_color);

NK_API struct nk_colorf nk_color_cf(struct nk_color);

NK_API void nk_color_d(double *r, double *g, double *b, double *a, struct nk_color);

NK_API void nk_color_dv(double *rgba_out, struct nk_color);


NK_API nk_uint nk_color_u32(struct nk_color);

NK_API void nk_color_hex_rgba(char *output, struct nk_color);

NK_API void nk_color_hex_rgb(char *output, struct nk_color);


NK_API void nk_color_hsv_i(int *out_h, int *out_s, int *out_v, struct nk_color);

NK_API void nk_color_hsv_b(nk_byte *out_h, nk_byte *out_s, nk_byte *out_v, struct nk_color);

NK_API void nk_color_hsv_iv(int *hsv_out, struct nk_color);

NK_API void nk_color_hsv_bv(nk_byte *hsv_out, struct nk_color);

NK_API void nk_color_hsv_f(float *out_h, float *out_s, float *out_v, struct nk_color);

NK_API void nk_color_hsv_fv(float *hsv_out, struct nk_color);


NK_API void nk_color_hsva_i(int *h, int *s, int *v, int *a, struct nk_color);

NK_API void nk_color_hsva_b(nk_byte *h, nk_byte *s, nk_byte *v, nk_byte *a, struct nk_color);

NK_API void nk_color_hsva_iv(int *hsva_out, struct nk_color);

NK_API void nk_color_hsva_bv(nk_byte *hsva_out, struct nk_color);

NK_API void nk_color_hsva_f(float *out_h, float *out_s, float *out_v, float *out_a, struct nk_color);

NK_API void nk_color_hsva_fv(float *hsva_out, struct nk_color);

/* =============================================================================
 *
 *                                  IMAGE
 *
 * ============================================================================= */
NK_API nk_handle nk_handle_ptr(void*);

NK_API nk_handle nk_handle_id(int);

NK_API struct nk_image nk_image_handle(nk_handle);

NK_API struct nk_image nk_image_ptr(void*);

NK_API struct nk_image nk_image_id(int);

NK_API int nk_image_is_subimage(const struct nk_image* img);

NK_API struct nk_image nk_subimage_ptr(void*, unsigned short w, unsigned short h, struct nk_rect sub_region);

NK_API struct nk_image nk_subimage_id(int, unsigned short w, unsigned short h, struct nk_rect sub_region);

NK_API struct nk_image nk_subimage_handle(nk_handle, unsigned short w, unsigned short h, struct nk_rect sub_region);

/* =============================================================================
 *
 *                                  MATH
 *
 * ============================================================================= */
NK_API nk_hash nk_murmur_hash(const void *key, int len, nk_hash seed);

NK_API void nk_triangle_from_direction(struct nk_vec2 *result, struct nk_rect r, float pad_x, float pad_y, enum nk_heading);


NK_API struct nk_vec2 nk_vec2(float x, float y);

NK_API struct nk_vec2 nk_vec2i(int x, int y);

NK_API struct nk_vec2 nk_vec2v(const float *xy);

NK_API struct nk_vec2 nk_vec2iv(const int *xy);


NK_API struct nk_rect nk_get_null_rect(void);

NK_API struct nk_rect nk_rect(float x, float y, float w, float h);

NK_API struct nk_rect nk_recti(int x, int y, int w, int h);

NK_API struct nk_rect nk_recta(struct nk_vec2 pos, struct nk_vec2 size);

NK_API struct nk_rect nk_rectv(const float *xywh);

NK_API struct nk_rect nk_rectiv(const int *xywh);

NK_API struct nk_vec2 nk_rect_pos(struct nk_rect);

NK_API struct nk_vec2 nk_rect_size(struct nk_rect);

/* =============================================================================
 *
 *                                  STRING
 *
 * ============================================================================= */
NK_API int nk_strlen(const char *str);

NK_API int nk_stricmp(const char *s1, const char *s2);

struct nk_user_font {
    nk_handle userdata;
    /* user provided font handle */
    float height;
    /* max height of the font */
    nk_text_width_f width;
    /* font string width in pixel callback */
#ifdef NK_INCLUDE_VERTEX_BUFFER_OUTPUT
    nk_query_font_glyph_f query;
    /* font glyph callback to query drawing info */
    nk_handle texture;
    /* texture handle to the used font atlas or texture */
#endif
};


struct nk_style_item {
    enum nk_style_item_type type;
    union nk_style_item_data data;
};


struct nk_context {
/* public: can be accessed freely */
    struct nk_input input;
    struct nk_style style;
    struct nk_buffer memory;
    struct nk_clipboard clip;
    nk_flags last_widget_state;
    enum nk_button_behavior button_behavior;
    struct nk_configuration_stacks stacks;
    float delta_time_seconds;

/* private:
    should only be accessed if you
    know what you are doing */
#ifdef NK_INCLUDE_VERTEX_BUFFER_OUTPUT
    struct nk_draw_list draw_list;
#endif
#ifdef NK_INCLUDE_COMMAND_USERDATA
    nk_handle userdata;
#endif
    /* text editor objects are quite big because of an internal
     * undo/redo stack. Therefore it does not make sense to have one for
     * each window for temporary use cases, so I only provide *one* instance
     * for all windows. This works because the content is cleared anyway */
    struct nk_text_edit text_edit;
    /* draw buffer used for overlay drawing operation like cursor */
    struct nk_command_buffer overlay;

    /* windows */
    int build;
    int use_pool;
    struct nk_pool pool;
    struct nk_window *begin;
    struct nk_window *end;
    struct nk_window *active;
    struct nk_window *current;
    struct nk_page_element *freelist;
    unsigned int count;
    unsigned int seq;
};