demo/sdl_opengl3/nimnuklear/nuklear.nim


proc style_default*(a2: ptr context) {.cdecl, importc: "nk_style_default",
                                   header: headernuklear.}
proc style_from_table*(a2: ptr context; a3: ptr color) {.cdecl,
    importc: "nk_style_from_table", header: headernuklear.}
proc style_load_cursor*(a2: ptr context; a3: style_cursor; a4: ptr cursor) {.cdecl,
    importc: "nk_style_load_cursor", header: headernuklear.}
proc style_load_all_cursors*(a2: ptr context; a3: ptr cursor) {.cdecl,
    importc: "nk_style_load_all_cursors", header: headernuklear.}
proc style_get_color_by_name*(a2: style_colors): cstring {.cdecl,
    importc: "nk_style_get_color_by_name", header: headernuklear.}
proc style_set_font*(a2: ptr context; a3: ptr user_font) {.cdecl,
    importc: "nk_style_set_font", header: headernuklear.}
proc style_set_cursor*(a2: ptr context; a3: style_cursor): cint {.cdecl,
    importc: "nk_style_set_cursor", header: headernuklear.}
proc style_show_cursor*(a2: ptr context) {.cdecl, importc: "nk_style_show_cursor",
                                       header: headernuklear.}
proc style_hide_cursor*(a2: ptr context) {.cdecl, importc: "nk_style_hide_cursor",
                                       header: headernuklear.}
proc style_push_font*(a2: ptr context; a3: ptr user_font): cint {.cdecl,
    importc: "nk_style_push_font", header: headernuklear.}
proc style_push_float*(a2: ptr context; a3: ptr cfloat; a4: cfloat): cint {.cdecl,
    importc: "nk_style_push_float", header: headernuklear.}
proc style_push_vec2*(a2: ptr context; a3: ptr vec2; a4: vec2): cint {.cdecl,
    importc: "nk_style_push_vec2", header: headernuklear.}
proc style_push_style_item*(a2: ptr context; a3: ptr style_item; a4: style_item): cint {.
    cdecl, importc: "nk_style_push_style_item", header: headernuklear.}
proc style_push_flags*(a2: ptr context; a3: ptr flags; a4: flags): cint {.cdecl,
    importc: "nk_style_push_flags", header: headernuklear.}
proc style_push_color*(a2: ptr context; a3: ptr color; a4: color): cint {.cdecl,
    importc: "nk_style_push_color", header: headernuklear.}
proc style_pop_font*(a2: ptr context): cint {.cdecl, importc: "nk_style_pop_font",
    header: headernuklear.}
proc style_pop_float*(a2: ptr context): cint {.cdecl, importc: "nk_style_pop_float",
    header: headernuklear.}
proc style_pop_vec2*(a2: ptr context): cint {.cdecl, importc: "nk_style_pop_vec2",
    header: headernuklear.}
proc style_pop_style_item*(a2: ptr context): cint {.cdecl,
    importc: "nk_style_pop_style_item", header: headernuklear.}
proc style_pop_flags*(a2: ptr context): cint {.cdecl, importc: "nk_style_pop_flags",
    header: headernuklear.}
proc style_pop_color*(a2: ptr context): cint {.cdecl, importc: "nk_style_pop_color",
    header: headernuklear.}
proc rgb*(r: cint; g: cint; b: cint): color {.cdecl, importc: "nk_rgb",
                                      header: headernuklear.}
proc rgb_iv*(rgb: ptr cint): color {.cdecl, importc: "nk_rgb_iv", header: headernuklear.}
proc rgb_bv*(rgb: ptr byte): color {.cdecl, importc: "nk_rgb_bv", header: headernuklear.}
proc rgb_f*(r: cfloat; g: cfloat; b: cfloat): color {.cdecl, importc: "nk_rgb_f",
    header: headernuklear.}
proc rgb_fv*(rgb: ptr cfloat): color {.cdecl, importc: "nk_rgb_fv",
                                  header: headernuklear.}
proc rgb_cf*(c: colorf): color {.cdecl, importc: "nk_rgb_cf", header: headernuklear.}
proc rgb_hex*(rgb: cstring): color {.cdecl, importc: "nk_rgb_hex",
                                 header: headernuklear.}
proc rgba*(r: cint; g: cint; b: cint; a: cint): color {.cdecl, importc: "nk_rgba",
    header: headernuklear.}
proc rgba_u32*(a2: uint): color {.cdecl, importc: "nk_rgba_u32", header: headernuklear.}
proc rgba_iv*(rgba: ptr cint): color {.cdecl, importc: "nk_rgba_iv",
                                  header: headernuklear.}
proc rgba_bv*(rgba: ptr byte): color {.cdecl, importc: "nk_rgba_bv",
                                  header: headernuklear.}
proc rgba_f*(r: cfloat; g: cfloat; b: cfloat; a: cfloat): color {.cdecl,
    importc: "nk_rgba_f", header: headernuklear.}
proc rgba_fv*(rgba: ptr cfloat): color {.cdecl, importc: "nk_rgba_fv",
                                    header: headernuklear.}
proc rgba_cf*(c: colorf): color {.cdecl, importc: "nk_rgba_cf", header: headernuklear.}
proc rgba_hex*(rgb: cstring): color {.cdecl, importc: "nk_rgba_hex",
                                  header: headernuklear.}
proc hsva_colorf*(h: cfloat; s: cfloat; v: cfloat; a: cfloat): colorf {.cdecl,
    importc: "nk_hsva_colorf", header: headernuklear.}
proc hsva_colorfv*(c: ptr cfloat): colorf {.cdecl, importc: "nk_hsva_colorfv",
                                       header: headernuklear.}
proc colorf_hsva_f*(out_h: ptr cfloat; out_s: ptr cfloat; out_v: ptr cfloat;
                   out_a: ptr cfloat; `in`: colorf) {.cdecl,
    importc: "nk_colorf_hsva_f", header: headernuklear.}
proc colorf_hsva_fv*(hsva: ptr cfloat; `in`: colorf) {.cdecl,
    importc: "nk_colorf_hsva_fv", header: headernuklear.}
proc hsv*(h: cint; s: cint; v: cint): color {.cdecl, importc: "nk_hsv",
                                      header: headernuklear.}
proc hsv_iv*(hsv: ptr cint): color {.cdecl, importc: "nk_hsv_iv", header: headernuklear.}
proc hsv_bv*(hsv: ptr byte): color {.cdecl, importc: "nk_hsv_bv", header: headernuklear.}
proc hsv_f*(h: cfloat; s: cfloat; v: cfloat): color {.cdecl, importc: "nk_hsv_f",
    header: headernuklear.}
proc hsv_fv*(hsv: ptr cfloat): color {.cdecl, importc: "nk_hsv_fv",
                                  header: headernuklear.}
proc hsva*(h: cint; s: cint; v: cint; a: cint): color {.cdecl, importc: "nk_hsva",
    header: headernuklear.}
proc hsva_iv*(hsva: ptr cint): color {.cdecl, importc: "nk_hsva_iv",
                                  header: headernuklear.}
proc hsva_bv*(hsva: ptr byte): color {.cdecl, importc: "nk_hsva_bv",
                                  header: headernuklear.}
proc hsva_f*(h: cfloat; s: cfloat; v: cfloat; a: cfloat): color {.cdecl,
    importc: "nk_hsva_f", header: headernuklear.}
proc hsva_fv*(hsva: ptr cfloat): color {.cdecl, importc: "nk_hsva_fv",
                                    header: headernuklear.}
proc nk_color_f*(r: ptr cfloat; g: ptr cfloat; b: ptr cfloat; a: ptr cfloat; a6: color) {.cdecl,
    importc: "nk_color_f", header: headernuklear.}
proc color_fv*(rgba_out: ptr cfloat; a3: color) {.cdecl, importc: "nk_color_fv",
    header: headernuklear.}
proc color_cf*(a2: color): colorf {.cdecl, importc: "nk_color_cf",
                                header: headernuklear.}
proc color_d*(r: ptr cdouble; g: ptr cdouble; b: ptr cdouble; a: ptr cdouble; a6: color) {.
    cdecl, importc: "nk_color_d", header: headernuklear.}
proc color_dv*(rgba_out: ptr cdouble; a3: color) {.cdecl, importc: "nk_color_dv",
    header: headernuklear.}
proc color_u32*(a2: color): uint {.cdecl, importc: "nk_color_u32",
                               header: headernuklear.}
proc color_hex_rgba*(output: cstring; a3: color) {.cdecl,
    importc: "nk_color_hex_rgba", header: headernuklear.}
proc color_hex_rgb*(output: cstring; a3: color) {.cdecl, importc: "nk_color_hex_rgb",
    header: headernuklear.}
proc color_hsv_i*(out_h: ptr cint; out_s: ptr cint; out_v: ptr cint; a5: color) {.cdecl,
    importc: "nk_color_hsv_i", header: headernuklear.}
proc color_hsv_b*(out_h: ptr byte; out_s: ptr byte; out_v: ptr byte; a5: color) {.cdecl,
    importc: "nk_color_hsv_b", header: headernuklear.}
proc color_hsv_iv*(hsv_out: ptr cint; a3: color) {.cdecl, importc: "nk_color_hsv_iv",
    header: headernuklear.}
proc color_hsv_bv*(hsv_out: ptr byte; a3: color) {.cdecl, importc: "nk_color_hsv_bv",
    header: headernuklear.}
proc color_hsv_f*(out_h: ptr cfloat; out_s: ptr cfloat; out_v: ptr cfloat; a5: color) {.
    cdecl, importc: "nk_color_hsv_f", header: headernuklear.}
proc color_hsv_fv*(hsv_out: ptr cfloat; a3: color) {.cdecl, importc: "nk_color_hsv_fv",
    header: headernuklear.}
proc color_hsva_i*(h: ptr cint; s: ptr cint; v: ptr cint; a: ptr cint; a6: color) {.cdecl,
    importc: "nk_color_hsva_i", header: headernuklear.}
proc color_hsva_b*(h: ptr byte; s: ptr byte; v: ptr byte; a: ptr byte; a6: color) {.cdecl,
    importc: "nk_color_hsva_b", header: headernuklear.}
proc color_hsva_iv*(hsva_out: ptr cint; a3: color) {.cdecl,
    importc: "nk_color_hsva_iv", header: headernuklear.}
proc color_hsva_bv*(hsva_out: ptr byte; a3: color) {.cdecl,
    importc: "nk_color_hsva_bv", header: headernuklear.}
proc color_hsva_f*(out_h: ptr cfloat; out_s: ptr cfloat; out_v: ptr cfloat;
                  out_a: ptr cfloat; a6: color) {.cdecl, importc: "nk_color_hsva_f",
    header: headernuklear.}
proc color_hsva_fv*(hsva_out: ptr cfloat; a3: color) {.cdecl,
    importc: "nk_color_hsva_fv", header: headernuklear.}
proc handle_ptr*(a2: pointer): handle {.cdecl, importc: "nk_handle_ptr",
                                    header: headernuklear.}
proc handle_id*(a2: cint): handle {.cdecl, importc: "nk_handle_id",
                                header: headernuklear.}
proc image_handle*(a2: handle): img {.cdecl, importc: "nk_image_handle",
                                    header: headernuklear.}
proc image_ptr*(a2: pointer): img {.cdecl, importc: "nk_image_ptr",
                                  header: headernuklear.}
proc image_id*(a2: cint): img {.cdecl, importc: "nk_image_id", header: headernuklear.}
proc image_is_subimage*(img: ptr img): cint {.cdecl,
    importc: "nk_image_is_subimage", header: headernuklear.}
proc subimage_ptr*(a2: pointer; w: cushort; h: cushort; sub_region: rect): img {.cdecl,
    importc: "nk_subimage_ptr", header: headernuklear.}
proc subimage_id*(a2: cint; w: cushort; h: cushort; sub_region: rect): img {.cdecl,
    importc: "nk_subimage_id", header: headernuklear.}
proc subimage_handle*(a2: handle; w: cushort; h: cushort; sub_region: rect): img {.
    cdecl, importc: "nk_subimage_handle", header: headernuklear.}
proc murmur_hash*(key: pointer; len: cint; seed: hash): hash {.cdecl,
    importc: "nk_murmur_hash", header: headernuklear.}
proc triangle_from_direction*(result: ptr vec2; r: rect; pad_x: cfloat; pad_y: cfloat;
                             a6: heading) {.cdecl,
    importc: "nk_triangle_from_direction", header: headernuklear.}
proc newVec2*(x: cfloat; y: cfloat): vec2 {.cdecl, importc: "struct nk_vec2", header: headernuklear.}
proc newVec2i*(x: cint; y: cint): vec2 {.cdecl, importc: "struct nk_vec2i", header: headernuklear.}
proc vec2v*(xy: ptr cfloat): vec2 {.cdecl, importc: "nk_vec2v", header: headernuklear.}
proc vec2iv*(xy: ptr cint): vec2 {.cdecl, importc: "nk_vec2iv", header: headernuklear.}
proc get_null_rect*(): rect {.cdecl, importc: "nk_get_null_rect",
                           header: headernuklear.}
proc newRect*(x: cfloat; y: cfloat; w: cfloat; h: cfloat): rect {.cdecl, importc: "struct nk_rect",
    header: headernuklear.}
proc newRecti*(x: cint; y: cint; w: cint; h: cint): rect {.cdecl, importc: "struct nk_recti",
    header: headernuklear.}
proc recta*(pos: vec2; size: vec2): rect {.cdecl, importc: "nk_recta",
                                     header: headernuklear.}
proc rectv*(xywh: ptr cfloat): rect {.cdecl, importc: "nk_rectv", header: headernuklear.}
proc rectiv*(xywh: ptr cint): rect {.cdecl, importc: "nk_rectiv", header: headernuklear.}
proc rect_pos*(a2: rect): vec2 {.cdecl, importc: "nk_rect_pos", header: headernuklear.}
proc rect_size*(a2: rect): vec2 {.cdecl, importc: "nk_rect_size", header: headernuklear.}
proc strlen*(str: cstring): cint {.cdecl, importc: "nk_strlen", header: headernuklear.}
proc stricmp*(s1: cstring; s2: cstring): cint {.cdecl, importc: "nk_stricmp",
    header: headernuklear.}
